--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,62 @@ canvas {
     background-size: contain;*/
   }
 
-#notes-display {
+
+
+#container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+
+#game, #combo, #score {
   display: none;
 }
 
+body {
+  background-image: url(/assets/diogo-azambuja-final-render-01-software.jpg);
+  background-size:cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;  
+}
 
+#combo, #score {
+  font-size: 35px;
+  color: white;
+}
 
+@font-face {
+  font-family: "Nightmare Hero";
+  src: url(/assets/Nightmare_Hero_Normal.ttf) format("truetype");
+}
+
+#title {
+  font-family: "Nightmare Hero";
+  font-size: 100px;
+  color: black;
+  text-shadow: 2px 2px 10px white;
+}
+
+#scoreboard {
+  margin-left: 20px;
+  padding: 145px;
+  width: 33vw;
+}
+
+#start-btn {
+  border: none;
+  font-size: 40px;
+  background-color: black;
+  color: orange;
+  transition: 0.4s;
+  border-radius: 10px;
+}
+
+#start-btn:hover {
+  background-color: orange;
+  color: black;
+}
